2013-02-19  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-29
       
       * JSPWIKI-764: ChangeLog published on site
       
       * Upgraded version of maven's tomcat plugin to latest available (JSPWIKI-651 related) 
       
2013-02-19  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-28
       
       * JSPWIKI-762: Drop TranslatorReader
       
       * JSPWIKI-763: Requirement of at least Java 6 to build 
       
2013-02-15  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-27

       * changed test email addresses from example.com to mailinator.com

2013-02-14  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-26

       * changed test email addresses testville.com to example.com (reported by Tony Stevenson from infra)

2013-02-12  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-25
       
       * JSPWIKI-759 Resin 4 Compatibility (thanks to Paul Cowan)
       
       * build.xml tweak: shut down the Jetty test server after the last webtest

2013-02-08  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-24
       
       * Decoupled (for 2.10 scope) Preferences from WikiContext, effectively meaning that the following 
         methods are now deprecated
           - WikiContext#getBundle( String ) in favour of Preferences#getBundle( WikiContext, String )
           - WikiContext#getLocale( WikiContext ) in favour of Preferences#getLocale( WikiContext )
           - WikiContext#hasAccess( HttpServletResponse ) in favour of 
             AuthorizationManager#hasAccess( HttpServletResponse )
           - WikiContext#hasAccess( HttpServletResponse, boolean ) in favour of 
             AuthorizationManager#hasAccess( HttpServletResponse, boolean )
             
       * Decoupled (for 2.10 scope) org.apache.wiki.event from org.apache.wiki.workflow, by deprecating
           - WorkflowEvent#getWorkflow() in favour of WikiEvent#getSrc()
             