@@ -136,11 +136,6 @@
             <version>3.1</version>
         </dependency>
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
@@ -254,7 +249,7 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
                 <configuration>
                     <server>myTomcat</server>
                     <url>http://localhost:8080/manager/text</url>
@@ -343,6 +338,7 @@
                 <version>2.12.4</version>
                 <configuration>
                     <excludes>
+                        <!-- time-consuming tests excluded by default -->
                         <exclude>**/StressTestVersioningProvider.java</exclude>
                         <exclude>**/StressTestSpeed.java</exclude>
                     </excludes>
