@@ -1,3 +1,12 @@
+2013-03-6 Glen Mazza (glenmazza AT apache DOT org)
+
+      * Upgraded Maven's tomcat plugin to latest version 2.1
+
+      * Placed in a more helpful error message in RCSFileProvider.java
+        to let newbies know RCS needs to be installed on their machine
+
+      * Updated location in build.xml and pom.xml for JSTL library.
+
 2013-02-19  Juan Pablo Santos (juanpablo AT apache DOT org)
 
        * 2.9.1-svn-29
